Fix off alignment of mobile view on home page only

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,16 @@ body {
 font-family: Lato, roboto, sans-serif;
 font-weight: 300;
 color: black;
-margin: 0;
+width: 100%;
+height: 100%;
+}
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
 }
 /* headings and logo */
 header {
@@ -68,6 +77,10 @@ li.nav-logo a {
 list-style: none;
 text-decoration: none;
 }
+nav a:active {
+    color: prink;
+}
+
 /* containers & sections */
 div.container-1 {
 display: flex;
@@ -490,7 +503,7 @@ text-decoration: none;
 }
 .nav-list {
 line-height: 28px;
-padding: 1rem 0 1rem 0;
+padding: 1rem 0;
 flex-direction: column ;
 justify-content: center;
 }
@@ -499,7 +512,7 @@ list-style: none;
 font-size: 18px;
 align-items: center;
 line-height: .3rem;
-padding: 1rem 0 1rem 0;
+padding: 1rem 0;
 }
 div.container-1 {
 margin-top: 9rem;
@@ -548,7 +561,6 @@ width: 10%;
 /* Recipe page order list */
 .recipe-heading {
 margin-top: 4rem;
-height: 100%;
 text-align: center;
 }
 .ingredient  {
